# fancyarray

./: .gitignore  README.md
StructOfVectors/: CMakeLists.txt  StructOfVectors.hpp  main.cpp
fancyarray/: .clang-format  CMakeLists.txt  StructOfVectors.hpp  TrivialArrayOfStructs.hpp  TupleCommon.hpp  VectorOfStructs.hpp  file_common.hpp  main.cpp  performance_tuple_of_vectors.cpp  test_fancyarray.cpp  trivial_array_of_structs.hpp  trivial_struct_of_arrays.hpp  tuple_common.hpp  tuple_of_vectors.hpp  variadic_common.hpp  vector_of_tuples.hpp
